reduce padding on labels
closes universityofglasgow/issues#30

--- a/theme/gu24/less/moodle.less
+++ b/theme/gu24/less/moodle.less
@@ -38,6 +38,14 @@ table[border=1] td {border: 1px solid;}
     display: inline-block;
 }
 
+.section .activity.modtype_label .activityinstance {
+    display: none;
+}
+
+.modtype_label .no-overflow > p:last-child {
+    margin-bottom: 0;
+}
+
 .ie8 .section .activity .activityinstance img.activityicon {
     max-width: none;
 }
