--- a/theme/bootstrapbase/less/bootstrap/variables.less
+++ b/theme/bootstrapbase/less/bootstrap/variables.less
@@ -230,7 +230,7 @@
 
 // Form states and alerts
 // -------------------------
-@warningText:             #c09853;
+@warningText:             #8a6d3b;
 @warningBackground:       #fcf8e3;
 @warningBorder:           darken(spin(@warningBackground, -10), 3%);
 
