--- a/theme/gu24/less/moodle.less
+++ b/theme/gu24/less/moodle.less
@@ -56,8 +56,13 @@ table[border=1] td {border: 1px solid;}
     }
 }
 
-.que.multichoice .answer .specificfeedback {
+.que.multichoice .answer .correct .specificfeedback,
+.que.multichoice .answer .incorrect .specificfeedback,
+.que.multichoice .answer .partiallycorrect .specificfeedback {
     background-color: inherit;
+}
+.que.multichoice .answer .specificfeedback {
+    white-space: normal;
 }
 
 .course-content ul.section{
