stop dnd background image resizing

--- a/theme/gu24/less/moodle.less
+++ b/theme/gu24/less/moodle.less
@@ -46,6 +46,10 @@ table[border=1] td {border: 1px solid;}
     margin-bottom: 0;
 }
 
+.droparea img.dropbackground {
+    max-width: none;
+}
+
 .ie8 .section .activity .activityinstance img.activityicon {
     max-width: none;
 }
