gu28: adding font-awesome stuff to theme

--- a/theme/gu28/less/gu28.less
+++ b/theme/gu28/less/gu28.less
@@ -2,10 +2,10 @@
  * Import all the rules from the parent.
  */
 @import "../../bootstrap/less/moodle.less";
-//@import "variables.less";
+@import "font-awesome.less";
 @import "spacelab_variables.less";
 @import "bootswatch.less";
-//@import "spacelab.less";
+@import "blocks.less";
 
 @font-face {
   font-family: 'Glyphicons Halflings';
