gu28: adding colours to bootswatch variables

--- a/theme/gu28/less/gu28.less
+++ b/theme/gu28/less/gu28.less
@@ -3,8 +3,8 @@
  */
 @import "../../bootstrap/less/moodle.less";
 @import "font-awesome.less";
-@import "spacelab_variables.less";
-@import "bootswatch.less";
+@import "variables.less";
+@import "spacelab.less";
 @import "blocks.less";
 
 @font-face {
