gu28: adding glasgow logo to navbar

--- a/theme/gu28/less/gu28.less
+++ b/theme/gu28/less/gu28.less
@@ -4,8 +4,9 @@
 @import "../../bootstrap/less/moodle.less";
 @import "font-awesome.less";
 @import "variables.less";
-@import "spacelab.less";
+@import "bootswatch.less";
 @import "blocks.less";
+@import "glasgow.less";
 
 @font-face {
   font-family: 'Glyphicons Halflings';
