--- a/theme/gu28/less/bootswatch.less
+++ b/theme/gu28/less/bootswatch.less
@@ -1,78 +1,116 @@
-// Cerulean 3.1.1
+// Spacelab 3.3.4
 // Bootswatch
 // -----------------------------------------------------
 
+@import url("//fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700");
+
 .btn-shadow(@color) {
-  #gradient > .vertical-three-colors(lighten(@color, 8%), @color, 60%, darken(@color, 4%));
+  #gradient > .vertical-three-colors(lighten(@color, 15%), @color, 50%, darken(@color, 4%));
   filter: none;
-  border-bottom: 1px solid darken(@color, 10%);
+  border: 1px solid darken(@color, 10%);
 }
 
 // Navbar =====================================================================
 
 .navbar {
+
   .btn-shadow(@navbar-default-bg);
-  filter: none;
-  .box-shadow(0 1px 10px rgba(0, 0, 0, 0.1));
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
 
-  .navbar-nav > li > a,
-  &-brand {
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+  &-inverse {
+    .btn-shadow(@navbar-inverse-bg);
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
+
+    .badge {
+      background-color: #fff;
+      color: @navbar-inverse-bg;
+    }
   }
-}
 
-.navbar-inverse {
-  #gradient > .vertical-three-colors(lighten(@navbar-inverse-bg, 8%), lighten(@navbar-inverse-bg, 4%), 60%, darken(@navbar-inverse-bg, 2%));
-  filter: none;
-  border-bottom: 1px solid darken(@navbar-inverse-bg, 10%);
+  .badge {
+    text-shadow: none;
+  }
+
+  &-nav > li > a,
+  &-nav > li > a:hover {
+    padding-top: (@navbar-padding-vertical + 2px);
+    padding-bottom: (@navbar-padding-vertical - 2px);
+    .transition(color ease-in-out .2s);
+  }
+  
+  &-brand,
+  &-brand:hover {
+    .transition(color ease-in-out .2s);
+  }
+
+  .caret,
+  .caret:hover {
+    .transition(border-color ease-in-out .2s);
+  }
+
+  .dropdown-menu {
+    text-shadow: none;
+  }
 }
 
 // Buttons ====================================================================
 
 .btn {
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
 
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+  &-default {
+    .btn-shadow(@btn-default-bg);
 
-  .caret {
-    border-top-color: #fff;
-  }
-}
-
-.btn-default {
-  
-  .btn-shadow(@btn-default-bg);
-
-  &:hover {
-    color: @btn-default-color;
+    &:hover {
+      .btn-shadow(darken(@btn-default-bg, 4%));
+    }
   }
 
-  .caret {
-    border-top-color: @text-color;
+  &-primary {
+    .btn-shadow(@btn-primary-bg);
+
+    &:hover {
+      .btn-shadow(darken(@btn-primary-bg, 4%));
+    }
   }
-}
 
-.btn-default {
-  .btn-shadow(@btn-default-bg);
-}
+  &-success {
+    .btn-shadow(@btn-success-bg);
 
-.btn-primary {
-  .btn-shadow(@btn-primary-bg);
-}
+    &:hover {
+      .btn-shadow(darken(@btn-success-bg, 4%));
+    }
+  }
 
-.btn-success {
-  .btn-shadow(@btn-success-bg);
-}
+  &-info {
+    .btn-shadow(@btn-info-bg);
 
-.btn-info {
-  .btn-shadow(@btn-info-bg);
-}
+    &:hover {
+      .btn-shadow(darken(@btn-info-bg, 4%));
+    }
+  }
 
-.btn-warning {
-  .btn-shadow(@btn-warning-bg);
-}
+  &-warning {
+    .btn-shadow(@btn-warning-bg);
 
-.btn-danger {
-  .btn-shadow(@btn-danger-bg);
+    &:hover {
+      .btn-shadow(darken(@btn-warning-bg, 4%));
+    }
+  }
+
+  &-danger {
+    .btn-shadow(@btn-danger-bg);
+
+    &:hover {
+      .btn-shadow(darken(@btn-danger-bg, 4%));
+    }
+  }
+
+  &:active,
+  &.active {
+    background-image: none;
+    .box-shadow(inset 0 3px 5px rgba(0,0,0,.125));
+  }
 }
 
 // Typography =================================================================
@@ -89,14 +127,11 @@
 
 // Containers =================================================================
 
-.panel-primary,
-.panel-success,
-.panel-warning,
-.panel-danger,
-.panel-info {
+.panel {
 
-  .panel-heading,
-  .panel-title {
-    color: #fff;
+  &-primary {
+    .panel-title {
+      color: #fff;
+    }
   }
 }
