--- a/theme/gu28/less/variables.less
+++ b/theme/gu28/less/variables.less
@@ -14,16 +14,34 @@
 @gray-light:             lighten(@gray-base, 60%);   // #999
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-//@brand-primary:         #446E9B;
-//@brand-success:         #3CB521;
-//@brand-info:            #3399F3;
-//@brand-warning:         #D47500;
-//@brand-danger:          #CD0200;
-@brand-primary:         #003865;
-@brand-success:         #84BD00;
-@brand-info:            #009DEC;
-@brand-warning:         #FFB948;
-@brand-danger:          #B30C00;
+// Glasgow colours
+@gu_university_blue:	#003865;
+
+@gu-heather:		#5b537d;
+@gu_aquamarine:		#9ab9ad;
+@gu_slate:		#4f5961;
+@gu_rose:		#d278ab;
+@gu_mocha:		#b59079;
+
+@gu_lawn:		#84bd00;
+@gu_cobalt:		#009dec;
+@gu_turquoise:		#00b5d1;
+@gu_sunshine:		#ffdc36;
+@gu_pumpkin:		#ffb948;
+@gu_thistle:		#951272;
+@gu_pillarbox:		#b30c00;
+@gu_lavendar:		#5b4d94;
+
+@gu_forest:		#005133;
+@gu_burgundy:		#7d2239;
+@gu_rust:		#9a3a06;
+@gu_sandstone:		#52473b;
+
+@brand-primary:         @gu_university_blue;
+@brand-success:         @gu_lawn;
+@brand-info:            @gu_cobalt;
+@brand-warning:         @gu_pumpkin;
+@brand-danger:          @gu_pillarbox;
 
 
 //== Scaffolding
