gu28: login page instagram images working and Moodle logo in header

--- a/theme/gu28/less/glasgow.less
+++ b/theme/gu28/less/glasgow.less
@@ -9,6 +9,16 @@
     background-repeat: no-repeat;
     width: 200px;
     height: 60px;
+    border-right: 1px solid white;
+}
+
+#moodle-logo {
+    background-image: url([[pix:theme|moodle40]]);
+    background-repeat: no-repeat;
+    width: 200px;
+    height: 40px;
+    margin-left: 220px;
+    margin-top: 15px;
 }
 
 // Put back the alert stuff that Bootstrap took away
@@ -63,5 +73,9 @@ blockquote>.icon-quote-left{
         color: @gu_rust;
         background-color: fade(@gu_rust, 20%);
         border: 2px solid fade(@gu_rust, 50%);
+}
+
+.instafluff {
+    width: 100%;
 }
 
