gu28: few css tweaks for heading sizes etc

--- a/theme/gu28/less/glasgow.less
+++ b/theme/gu28/less/glasgow.less
@@ -1,3 +1,20 @@
+body {
+    margin: 0 10px;
+}
+
+// basics
+h1 {
+    font-size: 24px
+}
+
+h2 {
+    font-size: 20px;
+}
+
+h3 {
+    font-size: 18px;
+}
+
 // Headers logos and nav
 .navbar {
     background-image: none;
@@ -229,4 +246,9 @@ ul.socials {
 
 .block .header {
     background-color: fade(@gu_aquamarine, 50%);
+}
+
+// dashboard
+.course_title > h2.title {
+    font-size: 20px;
 }
