gu28: first cut off side-by-side login and image

--- a/theme/gu28/less/glasgow.less
+++ b/theme/gu28/less/glasgow.less
@@ -114,15 +114,20 @@ blockquote>.icon-quote-left{
     margin-bottom: 20px;
 }
 
-#login_images img {
-    max-width: 200px;
-    max-height: 200px;
+#login_layout img {
+    max-width: 400px;
+    max-height: 400px;
 }
 
 @media (max-width: 1100px) {
-    #login_images {
+    .instafluff {
         display: none;
     }
+}
+
+.loginbox.onecolumn {
+    width: 90%;
+    left: 0;
 }
 
 // social network icons
