--- a/theme/gu28/less/glasgow.less
+++ b/theme/gu28/less/glasgow.less
@@ -106,7 +106,14 @@ blockquote>.icon-quote-left{
 }
 
 .instafluff {
-    width: 100%;
+    
+}
+
+.sloganbox {
+    background-color: @gu_university_blue;
+    color: #fff; 
+    font-size: 28px;
+    font-face: helvetica, sans-serif;
 }
 
 // Login things
