--- a/theme/gu28/less/glasgow.less
+++ b/theme/gu28/less/glasgow.less
@@ -138,7 +138,7 @@ blockquote>.icon-quote-left{
     max-height: 400px;
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1200px) {
     .gufluff {
         display: none;
     }
@@ -147,8 +147,8 @@ blockquote>.icon-quote-left{
 .loginbox.onecolumn {
     width: 90%;
     height: 400px;
+    left: auto !important;
     max-width: 400px;
-    left: 0;
     margin-left: auto;
     margin-right: auto;
 }
