gu28: forcing background white

--- a/theme/gu28/less/glasgow.less
+++ b/theme/gu28/less/glasgow.less
@@ -1,5 +1,10 @@
 body {
     margin: 0 10px;
+    background-color: #fff !important;
+}
+
+html {
+    -webkit-tap-highlight-color: #fff;
 }
 
 // basics
