--- a/theme/gu28/less/glasgow.less
+++ b/theme/gu28/less/glasgow.less
@@ -39,6 +39,10 @@ h3 {
     padding: 9px 15px;
 }
 
+.navbar-default .navbar-nav>li>a {
+    color: #fff;
+}
+
 #logo {
     background-image: url([[pix:theme|logo]]);
     background-repeat: no-repeat;
@@ -141,6 +145,12 @@ blockquote>.icon-quote-left{
 #login_layout img {
     max-width: 400px;
     max-height: 400px;
+}
+
+@media (max-width: 500px) {
+    #moodle-logo {
+        display: none;
+    } 
 }
 
 @media (max-width: 1200px) {
