--- a/theme/bootstrap/style/moodle-rtl.css
+++ b/theme/bootstrap/style/moodle-rtl.css
@@ -11055,6 +11055,32 @@ textarea.path-admin .roleassigntable input[type="text"] {
   padding-right: 20px;
 }
 
+.block.block_calendar_month th,
+.block.block_calendar_month td {
+  border: 1px solid #ddd;
+}
+
+.block.block_calendar_month .content {
+  padding: 11px 0 0 0;
+}
+
+.block.block_calendar_month td.today {
+  background-color: #337ab7;
+  color: #FFF;
+}
+
+.block.block_calendar_month td.today a {
+  color: #FFF;
+}
+
+.block.block_calendar_month td.today .calendar-event-panel {
+  color: #333333;
+}
+
+.block.block_calendar_month td {
+  width: (100/7)*1%;
+}
+
 .block .minicalendar {
   max-width: 280px;
   margin: 0 auto;
@@ -14545,6 +14571,69 @@ textareatextarea {
   height: auto;
 }
 
+/** Messenger send message dialog */
+
+.core_message-messenger-sendmessage-hidden {
+  display: none;
+}
+
+.core_message-messenger-sendmessage .message-actions {
+  position: relative;
+}
+
+.core_message-messenger-sendmessage .message-area {
+  height: 240px;
+  max-height: 100%;
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.core_message-messenger-sendmessage .message-input {
+  width: 100%;
+  height: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.core_message-messenger-sendmessage .message-send {
+  margin: 0;
+  float: left;
+}
+
+.core_message-messenger-sendmessage .message-notice-area {
+  display: table;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.core_message-messenger-sendmessage .message-notice {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.core_message-messenger-sendmessage .message-notice > div {
+  background: #eee;
+  padding: 5px;
+  font-size: 12px;
+}
+
+.core_message-messenger-sendmessage .message-footer {
+  margin-top: 3px;
+  line-height: 20px;
+}
+
+.core_message-messenger-sendmessage .message-history {
+  position: absolute;
+  bottom: 0;
+}
+
 /* Question */
 
 .questionbank h2 {
@@ -17309,7 +17398,6 @@ textareaselect.singleselect {
   .form-item .form-setting > input[type="password"],
   .mform .fcontainer .fitem .felement > input[type="password"] {
     width: auto;
-    min-width: 480px;
     margin-bottom: 5px;
   }
 
@@ -20250,41 +20338,8 @@ fieldset[disabled] #page-grade-grading-manage .actions .action {
   background: #ffffff none no-repeat top left;
 }
 
-.dir-rtl #rubric-rubric.gradingform_rubric #rubric-criteria .criterion .level .score {
-  text-align: left;
-  float: left;
-  margin-right: 28px;
-  margin-left: 0px;
-}
-
-.dir-rtl #rubric-rubric.gradingform_rubric #rubric-criteria .criterion .level .delete {
-  float: right;
-}
-
-.dir-rtl #rubric-rubric.gradingform_rubric #rubric-criteria .criterion .level .delete input {
-  right: 0;
-  left: auto;
-}
-
-.dir-rtl #rubric-rubric.gradingform_rubric .addcriterion {
-  margin-left: 5px;
-  margin-right: 0px;
-}
-
-.dir-rtl #rubric-rubric.gradingform_rubric .addcriterion input {
-  padding-left: 26px;
-  padding-right: 10px;
-  background-position: left 8px top 8px;
-}
-
-.dir-rtl #rubric-rubric.gradingform_rubric .options .option .value {
-  margin-right: 0px;
-  margin-left: 5px;
-}
-
-.dir-rtl #rubric-rubric.gradingform_rubric .options .option input {
-  margin-right: 12px;
-  margin-left: 5px;
+.criteria .remark textarea {
+  height: auto;
 }
 
 .mform.gradingform_rubric_editform .fitem .felement .hiddenelement {
@@ -20363,7 +20418,6 @@ fieldset[disabled] #page-grade-grading-manage .actions .action {
 #rubric-rubric.gradingform_rubric #rubric-criteria .criterion .scorevalue input {
   float: none;
   width: 3em;
-  display: inline;
 }
 
 #rubric-rubric.gradingform_rubric #rubric-criteria .criterion .scorevalue input.hiddenelement,
