--- a/theme/bootstrap/style/moodle.css
+++ b/theme/bootstrap/style/moodle.css
@@ -9038,6 +9038,26 @@ textarea.path-admin .roleassigntable input[type="text"] {
 #page-calendar-export .indent {
   padding-left: 20px;
 }
+.block.block_calendar_month th,
+.block.block_calendar_month td {
+  border: 1px solid #ddd;
+}
+.block.block_calendar_month .content {
+  padding: 11px 0 0 0;
+}
+.block.block_calendar_month td.today {
+  color: #fff;
+  background-color: #337ab7;
+}
+.block.block_calendar_month td.today a {
+  color: #fff;
+}
+.block.block_calendar_month td.today .calendar-event-panel {
+  color: #333;
+}
+.block.block_calendar_month td {
+  width: (100/7)*1%;
+}
 .block .minicalendar {
   width: 100%;
   max-width: 280px;
@@ -11934,6 +11954,58 @@ fieldset[disabled] textarea {
 textareatextarea {
   height: auto;
 }
+/** Messenger send message dialog */
+.core_message-messenger-sendmessage-hidden {
+  display: none;
+}
+.core_message-messenger-sendmessage .message-actions {
+  position: relative;
+}
+.core_message-messenger-sendmessage .message-area {
+  position: relative;
+  height: 240px;
+  max-height: 100%;
+  margin-bottom: 10px;
+}
+.core_message-messenger-sendmessage .message-input {
+  width: 100%;
+  height: 100%;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.core_message-messenger-sendmessage .message-send {
+  float: right;
+  margin: 0;
+}
+.core_message-messenger-sendmessage .message-notice-area {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: table;
+  width: 100%;
+  height: 100%;
+}
+.core_message-messenger-sendmessage .message-notice {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+}
+.core_message-messenger-sendmessage .message-notice > div {
+  padding: 5px;
+  font-size: 12px;
+  background: #eee;
+}
+.core_message-messenger-sendmessage .message-footer {
+  margin-top: 3px;
+  line-height: 20px;
+}
+.core_message-messenger-sendmessage .message-history {
+  position: absolute;
+  bottom: 0;
+}
 /* Question */
 .questionbank h2 {
   margin-top: 0;
@@ -14226,7 +14298,6 @@ textareaselect.singleselect {
   .form-item .form-setting > input[type="password"],
   .mform .fcontainer .fitem .felement > input[type="password"] {
     width: auto;
-    min-width: 480px;
     margin-bottom: 5px;
   }
   #page-mod-quiz-mod #id_reviewoptionshdr .fitem.fitem_fgroup {
@@ -16783,35 +16854,8 @@ fieldset[disabled] #page-grade-grading-manage .actions .action {
 .gradingform_rubric.editor .addcriterion input {
   background: #fff none no-repeat top left;
 }
-.dir-rtl #rubric-rubric.gradingform_rubric #rubric-criteria .criterion .level .score {
-  float: right;
-  margin-right: 0;
-  margin-left: 28px;
-  text-align: right;
-}
-.dir-rtl #rubric-rubric.gradingform_rubric #rubric-criteria .criterion .level .delete {
-  float: left;
-}
-.dir-rtl #rubric-rubric.gradingform_rubric #rubric-criteria .criterion .level .delete input {
-  right: auto;
-  left: 0;
-}
-.dir-rtl #rubric-rubric.gradingform_rubric .addcriterion {
-  margin-right: 5px;
-  margin-left: 0;
-}
-.dir-rtl #rubric-rubric.gradingform_rubric .addcriterion input {
-  padding-right: 26px;
-  padding-left: 10px;
-  background-position: right 8px top 8px;
-}
-.dir-rtl #rubric-rubric.gradingform_rubric .options .option .value {
-  margin-right: 5px;
-  margin-left: 0;
-}
-.dir-rtl #rubric-rubric.gradingform_rubric .options .option input {
-  margin-right: 5px;
-  margin-left: 12px;
+.criteria .remark textarea {
+  height: auto;
 }
 .mform.gradingform_rubric_editform .fitem .felement .hiddenelement {
   display: none;
@@ -16875,7 +16919,6 @@ fieldset[disabled] #page-grade-grading-manage .actions .action {
   background-color: #ddd;
 }
 #rubric-rubric.gradingform_rubric #rubric-criteria .criterion .scorevalue input {
-  display: inline;
   float: none;
   width: 3em;
 }
