gu29: first stab at improved login page layout

--- a/theme/gu28/less/glasgow.less
+++ b/theme/gu28/less/glasgow.less
@@ -119,26 +119,28 @@ blockquote>.icon-quote-left{
 }
 
 .guimage {
-    width: 400px;
+    width: 600px;
     height: 400px;
     float: left;
 }
 
 .gufluff {
-    width: 600px;
+    width: 800px;
     float: right;
     }
 
 .sloganbox {
+    font-family: 'Yantramanav', sans-serif;
+    font-weight: 100;
     background-color: @gu_university_blue;
     color: #fff; 
-    font-size: 28px;
-    font-face: helvetica, sans-serif;
+    font-size: 40px;
+    line-height: 95%;
     width: 200px;
     height: 400px;
     float: left;
-    text-align: right;
-    padding: 15px;
+    text-align: left;
+    padding: 40px 5px;
 }
 
 // Login things
@@ -147,7 +149,7 @@ blockquote>.icon-quote-left{
 }
 
 #login_layout img {
-    max-width: 400px;
+    max-width: 600px;
     max-height: 400px;
 }
 
@@ -157,7 +159,7 @@ blockquote>.icon-quote-left{
     } 
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1400px) {
     .gufluff {
         display: none;
     }
