gu29: login page layout improved

--- a/theme/gu28/less/glasgow.less
+++ b/theme/gu28/less/glasgow.less
@@ -126,7 +126,7 @@ blockquote>.icon-quote-left{
 
 .gufluff {
     width: 800px;
-    float: right;
+    float: left;
     }
 
 .sloganbox {
@@ -143,9 +143,19 @@ blockquote>.icon-quote-left{
     padding: 40px 5px;
 }
 
+.gulogin {
+    width: 400px;
+    height: 400px;
+    float: left;
+    margin-left: 10px;
+}
+
 // Login things
 #login_images {
     margin-bottom: 20px;
+}
+
+#login_layout {
 }
 
 #login_layout img {
