gu29: improved theme display on small screens

--- a/theme/gu28/less/glasgow.less
+++ b/theme/gu28/less/glasgow.less
@@ -173,6 +173,14 @@ blockquote>.icon-quote-left{
     .gufluff {
         display: none;
     }
+
+    .gulogin {
+        width: 300px;
+    }
+
+    .container-fluid {
+        padding-left: 5px;
+    }
 }
 
 .loginbox.onecolumn {
