gu29: login page should shrink to display on ipads

--- a/theme/gu28/less/glasgow.less
+++ b/theme/gu28/less/glasgow.less
@@ -169,7 +169,22 @@ blockquote>.icon-quote-left{
     } 
 }
 
-@media (max-width: 1400px) {
+@media (max-width: 1280px) {
+
+    .gufluff {
+        width: 600px;
+    }
+
+    .gulogin {
+        width: 300px;
+    }
+
+    .guimage {
+        width: 400px;
+    }
+}
+
+@media (max-width: 1023px) {
     .gufluff {
         display: none;
     }
