--- a/theme/gu28/less/glasgow.less
+++ b/theme/gu28/less/glasgow.less
@@ -169,7 +169,7 @@ blockquote>.icon-quote-left{
     } 
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 1290px) {
 
     .gufluff {
         width: 600px;
@@ -205,6 +205,10 @@ blockquote>.icon-quote-left{
     max-width: 400px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.loginbox .desc {
+    line-height: normal;
 }
 
 // social network icons
