--- a/theme/bootstrap/style/moodle-rtl.css
+++ b/theme/bootstrap/style/moodle-rtl.css
@@ -7975,13 +7975,24 @@ button.close {
   border-radius: 0 6px 6px 6px;
 }
 
-div[role="main"] ul,
-div[role="main"] ol {
-  padding: 0 20px;
-}
-
 pre {
   white-space: pre-wrap;
+}
+
+.progress .bar {
+  float: right;
+  width: 0%;
+  height: 100%;
+  font-size: 12px;
+  line-height: 20px;
+  color: #ffffff;
+  text-align: center;
+  background-color: #337ab7;
+  -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
+  -webkit-transition: width 0.6s ease;
+  -o-transition: width 0.6s ease;
+  transition: width 0.6s ease;
 }
 
 /* some very targetted corrections to roll back nameclashes between
@@ -8118,22 +8129,6 @@ img.icon.hide {
 
 .pagelayout-admin .show {
   display: inline !important;
-}
-
-div[role="main"] ul,
-div[role="main"] ol {
-  padding-right: 20px;
-  overflow: visible;
-}
-
-div[role="main"] ul.section,
-div[role="main"] ol.section,
-div[role="main"] ul.weeks,
-div[role="main"] ol.weeks,
-div[role="main"] ul.topics,
-div[role="main"] ol.topics {
-  padding: 0;
-  overflow: visible;
 }
 
 /** core.less */
@@ -8791,6 +8786,12 @@ form.popupform div {
 .action-icon img.smallicon {
   vertical-align: text-bottom;
   margin: 0 0.3em;
+}
+
+.smallicon {
+  -webkit-box-sizing: initial;
+  -moz-box-sizing: initial;
+  box-sizing: initial;
 }
 
 .no-overflow {
@@ -9636,7 +9637,7 @@ body#page-lib-editor-tinymce-plugins-moodlemedia-preview {
 /* Center the submit buttons within the area */
 
 .choosercontainer #chooseform .submitbuttons {
-  margin: 0.7em 0;
+  padding: 0.7em 0;
   text-align: center;
 }
 
@@ -10562,7 +10563,7 @@ textarea.path-admin .roleassigntable input[type="text"] {
   border-top-width: 0;
 }
 
-#page-admin-index #notice .checkforupdates {
+#page-admin-index .alert .singlebutton {
   text-align: center;
 }
 
@@ -13776,6 +13777,10 @@ textarea.box.message .message_form input[type="text"] {
   padding-left: 15px;
 }
 
+.box.message .contactselector .singleselect select {
+  width: 100%;
+}
+
 @media (min-width: 992px) {
   .box.message .contactselector {
     float: right;
@@ -13909,10 +13914,25 @@ textarea.box.message .contactselector form#usergroupform fieldset select {
   list-style: none;
 }
 
-.box.message .contactselector .message-contacts .pix,
-.box.message .contactselector .message-contacts .link,
+.box.message .contactselector .message-contacts {
+  position: relative;
+  border-bottom: 1px solid #dddddd;
+  margin-bottom: 10px;
+}
+
+.box.message .contactselector .message-contacts li:nth-child(odd) {
+  background-color: #f9f9f9;
+}
+
+.box.message .contactselector .message-contacts li {
+  padding: 5px 0;
+  line-height: 26px;
+  border-top: 1px solid #dddddd;
+}
+
 .box.message .contactselector .message-contacts .contact {
-  display: inline-block;
+  margin: 0 25px 0 24%;
+  text-align: right;
 }
 
 .box.message .contactselector .message-contacts .link {
@@ -13920,7 +13940,8 @@ textarea.box.message .contactselector form#usergroupform fieldset select {
 }
 
 .box.message .contactselector .message-contacts .pix {
-  margin-left: 5px;
+  position: absolute;
+  right: 0;
 }
 
 .box.message .messagearea {
@@ -14289,32 +14310,22 @@ textarea.box.message .contactselector form#usergroupform fieldset select {
 
 .box.message .messagearea .messagehistory #message_user_pictures .box.user {
   position: relative;
+  float: right;
+  width: 41.66666667%;
   min-height: 1px;
   padding-right: 15px;
   padding-left: 15px;
   text-align: center;
-}
-
-@media (min-width: 992px) {
-  .box.message .messagearea .messagehistory #message_user_pictures .box.user {
-    float: right;
-    width: 41.66666667%;
-  }
 }
 
 .box.message .messagearea .messagehistory #message_user_pictures .box.between {
   position: relative;
+  float: right;
+  width: 16.66666667%;
   min-height: 1px;
   padding-right: 15px;
   padding-left: 15px;
   text-align: center;
-}
-
-@media (min-width: 992px) {
-  .box.message .messagearea .messagehistory #message_user_pictures .box.between {
-    float: right;
-    width: 16.66666667%;
-  }
 }
 
 .box.message .messagearea .messagehistory .messagehistorytype {
@@ -15632,11 +15643,6 @@ body.path-question-type .mform fieldset.hidden {
   margin-left: 0;
 }
 
-#page-user-profile .node_category .contentnode,
-.path-user .node_category .contentnode {
-  margin-right: -20px;
-}
-
 .usermenu {
   float: left;
 }
@@ -15751,14 +15757,22 @@ fieldset[disabled] .userprofile .header-button-group .btn.active {
   }
 }
 
-.userprofile dl,
+.userprofile dd,
+.userprofile dt {
+  margin-right: 0px;
+}
+
 .userprofile ul {
-  margin: 0;
+  margin-right: 10px;
+}
+
+.userprofile ul > li ul {
+  margin-right: 0;
 }
 
 #page-user-profile .node_category li,
 .path-user .node_category li {
-  list-style-type: square;
+  list-style-type: none;
 }
 
 #page-user-profile .node_category li.contentnode,
@@ -16595,24 +16609,6 @@ ol {
   margin: 0 2px;
 }
 
-.block .header .commands {
-  clear: both;
-  text-align: left;
-}
-
-.block .header .commands > a {
-  margin: 0 3px;
-}
-
-.block .header .commands .icon img {
-  width: 12px;
-  height: 12px;
-}
-
-.block .header .commands img.actionmenu {
-  width: auto;
-}
-
 .block .content {
   word-wrap: break-word;
   padding: 4px 14px;
@@ -16699,6 +16695,24 @@ fieldset[disabled] .block .singleselect select {
 
 textarea.block .singleselect select {
   height: auto;
+}
+
+.editing .block .header .commands {
+  clear: both;
+  text-align: left;
+}
+
+.editing .block .header .commands > a {
+  margin: 0 3px;
+}
+
+.editing .block .header .commands .icon img {
+  width: 12px;
+  height: 12px;
+}
+
+.editing .block .header .commands img.actionmenu {
+  width: auto;
 }
 
 .block.list_block .unlist > li > .column {
@@ -19599,7 +19613,7 @@ input.fp-btn-choose {
 
 /* responsive.less */
 
-@media (max-width: 873px) {
+@media (max-width: 767px) {
   .file-picker .fp-repo-area {
     width: 100%;
     height: auto;
